Fix z-index for navbar

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,4 +6,5 @@
   background-color: $darker-blue;
   position: fixed;
   top: 0;
+  z-index: 5;
 }
